--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
   "author": "AxNA <hello@axna.io>",
   "license": "MIT",
   "dependencies": {
-    "ganache-cli": "6.5.0",
     "@openzeppelin/contracts": "2.3.0",
-    "truffle": "5.0.35"
+    "ganache-cli": "^6.10.1",
+    "truffle": "^5.1.42"
   },
   "scripts": {
     "compile": "truffle compile",
