--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "author": "AxNA <hello@axna.io>",
   "license": "MIT",
   "dependencies": {
-    "@openzeppelin/contracts": "2.3.0",
+    "@openzeppelin/contracts": "^3.1.0",
     "ganache-cli": "^6.10.1",
     "truffle": "^5.1.42"
   },
