--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "scripts": {
     "compile": "truffle compile",
+    "test": "truffle test",    
     "deploy": "truffle deploy --network ci"
   }
 }
