--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "@openzeppelin/contracts": "^3.1.0",
     "ganache-cli": "^6.10.1",
-    "truffle": "^5.1.42"
+    "truffle": "^5.1.43",
+    "truffle-hdwallet-provider": "^1.0.17"
   },
   "scripts": {
     "compile": "truffle compile",
