Add the deploy targets

--- a/package.json
+++ b/package.json
@@ -31,6 +31,13 @@
     "compile": "truffle compile",
     "test": "truffle test",
     "ganache": "ganache-cli --port 7545 --gasLimit 0xFFFFFFFF",
-    "deploy": "truffle deploy --network ci"
+    "flatten": "truffle-flattener ./contracts/ScarceEdition.sol > ./ScareEditionFlattened.sol",
+    "mainnet-migrate": "truffle deploy--network main",
+    "ropsten-migrate": "truffle deploy --network ropsten",
+    "rinkeby-migrate": "truffle deploy --network rinkeby",
+    "kovan-migrate": "truffle deploy --network kovan"
+  },
+  "devDependencies": {
+    "truffle-flattener": "^1.4.4"
   }
 }
