--- a/.github/workflows/truffle.yml
+++ b/.github/workflows/truffle.yml
@@ -8,13 +8,10 @@ on:
   pull_request:
     branches:
       - "*"
-
 jobs:
-  build:
-    strategy:
-      matrix:
-        platform: [ubuntu-latest]
-
+  run_truffle_unittests:
+    runs-on: ubuntu-latest
+    name: Run the Truffle unit tests
     steps:
     - uses: actions/checkout@v1
     - name: Use Node.js 12.x
