--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "ganache": "ganache-cli --port 7545 --gasLimit 0xFFFFFFFF",
     "flatten": "truffle-flattener ./contracts/ScarceEdition.sol > ./ScareEditionFlattened.sol",
     "lint": "solhint contracts/*.sol",
+    "coverage": "truffle run coverage",
     "mainnet-migrate": "truffle deploy --network main",
     "ropsten-migrate": "truffle deploy --network ropsten",
     "rinkeby-migrate": "truffle deploy --network rinkeby",
     "kovan-migrate": "truffle deploy --network kovan"
   },
   "devDependencies": {
+    "solidity-coverage": "^0.7.16",
     "truffle-flattener": "^1.5.0"
   }
 }
