--- a/package.json
+++ b/package.json
@@ -1,47 +1,9 @@
 {
-  "name": "scarce-editions",
-  "version": "1.0.0",
-  "description": "ERC721 token standard, designed to represent born digital art",
-  "keywords": [
-    "ethereum",
-    "erc721",
-    "solidity",
-    "smart",
-    "contract",
-    "blockchain"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ziendotio/scarce-editions.git"
-  },
-  "files": [
-    "build",
-    "contracts"
-  ],
-  "homepage": "https://github.com/ziendotio/scarce-editions",
-  "author": "zien <hhello@zien.io>",
-  "license": "MIT",
-  "dependencies": {
-    "@openzeppelin/contracts": "^3.4.1",
-    "ganache-cli": "^6.12.2",
-    "solhint": "^3.3.6",
-    "truffle": "^5.3.8",
-    "truffle-hdwallet-provider": "^1.0.17"
-  },
-  "scripts": {
-    "compile": "truffle compile",
-    "test": "truffle test",
-    "ganache": "ganache-cli --port 7545 --gasLimit 0xFFFFFFFF",
-    "flatten": "truffle-flattener ./contracts/ScarceEdition.sol > ./ScareEditionFlattened.sol",
-    "lint": "solhint contracts/*.sol",
-    "coverage": "truffle run coverage",
-    "mainnet-migrate": "truffle deploy --network main",
-    "ropsten-migrate": "truffle deploy --network ropsten",
-    "rinkeby-migrate": "truffle deploy --network rinkeby",
-    "kovan-migrate": "truffle deploy --network kovan"
-  },
+  "name": "hardhat-project",
   "devDependencies": {
-    "solidity-coverage": "^0.7.16",
-    "truffle-flattener": "^1.5.0"
+    "hardhat": "^2.3.3"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^3.4.1"
   }
 }
