--- a/package.json
+++ b/package.json
@@ -1,7 +1,22 @@
 {
-  "name": "hardhat-project",
+  "name": "scarce-editions",
+  "description": "ERC721 token standard, designed to represent born digital art",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "devDependencies": {
-    "hardhat": "^2.3.3"
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@types/chai": "^4.2.18",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^15.12.2",
+    "chai": "^4.3.4",
+    "ethereum-waffle": "^3.3.0",
+    "ethers": "^5.3.1",
+    "hardhat": "^2.3.3",
+    "prettier": "2.3.1",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.3"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^3.4.1"
