--- a/package.json
+++ b/package.json
@@ -18,11 +18,7 @@
   "author": "zien <hello@zien.io>",
   "license": "MIT",
   "dependencies": {
-    "@openzeppelin/contracts": "^3.4.1",
-    "ganache-cli": "^6.12.2",
-    "solhint": "^3.3.6",
-    "truffle": "^5.3.8",
-    "truffle-hdwallet-provider": "^1.0.17"
+    "@openzeppelin/contracts": "^3.4.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -38,10 +34,8 @@
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.3.1",
     "hardhat": "^2.3.3",
+    "solidity-coverage": "^0.7.16",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.3"
-  },
-  "dependencies": {
-    "@openzeppelin/contracts": "^3.4.1"
   }
 }
