--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.3.1",
     "hardhat": "^2.3.3",
+    "hardhat-abi-exporter": "^2.2.1",
     "hardhat-gas-reporter": "^1.0.4",
     "solidity-coverage": "^0.7.16",
     "ts-node": "^10.0.0",
