--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "author": "zien <hello@zien.io>",
   "license": "MIT",
   "dependencies": {
-    "@openzeppelin/contracts": "^3.4.1"
+    "@openzeppelin/contracts": "^3.4.1-solc-0.7-2",
+    "dotenv": "^10.0.0",
+    "hardhat-deploy": "^0.8.8",
+    "hardhat-deploy-ethers": "^0.3.0-beta.10"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
